<resources>
    <string name="app_name">app2</string>

    <string name="title_activity_home">Home2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="user_name" />
    <string name="hi">Hi</string>
    <string name="see_details">See Details</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="price">Price</string>
    <string name="product_name">Product name</string>
    <string name="flowers">Flowers</string>
    <string name="delivery_and_order_status">Delivery and Order Status</string>


    <string name="first">First Name:</string>
    <string name="last">Last Name:</string>
    <string name="phone">Phone Number:</string>
    <string name="email">Email :</string>
    <string name="address">Address :</string>
    <string name="Pwd">Password :</string>
    <string name="Pwd2">Re-Enter Password :</string>
    <string name="welcome">Welcome !</string>
    <string name="welcome2">Welcome To AnanthayaMart Family !</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="rScale">Rating Scale</string>
    <string name="userName">"User Name : "</string>
    <string name="feedValue">Feedback -:</string>
    <string name="btnEditReview">Change  Review</string>
    <string name="backProfileBtn">Back to profile</string>
    <string name="sendReviebtn">Send feedback</string>
    <string name="adminlogin">Admin Login</string>`
</resources>