<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="30dp"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="15dp"
    app:cardElevation="15dp">




    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">





        <ImageView
            android:id="@+id/cake_image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginStart="90dp"
            android:layout_marginEnd="90dp"
            android:scaleType="centerCrop"
            android:layout_marginTop="4dp"/>


        <TextView
            android:id="@+id/product"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/product_name"
            android:textAlignment="center"
            android:layout_marginTop="4dp"
            android:layout_below="@id/cake_image"
            android:textStyle="bold"
            android:textSize="20sp"
            />



        <TextView
            android:id="@+id/productprice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:textAlignment="center"
            android:layout_marginTop="4dp"
            android:layout_below="@id/product"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/black"/>


        <Button
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:id="@+id/cart_button"
            android:text="@string/add_to_cart"
            android:layout_below="@+id/productprice"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:textColor="@color/black"
            android:background="@color/themeColor"
            />

         <Button
             android:layout_width="150dp"
             android:layout_height="30dp"
             android:id="@+id/details"
             android:text="@string/see_details"
             android:layout_below="@+id/cart_button"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="8dp"
             android:textColor="@color/black"
             android:background="@color/green"
             android:layout_marginBottom="10dp"
             />


    </RelativeLayout>



</androidx.cardview.widget.CardView>