<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">



    <TextView
        android:id="@+id/lname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last"
        android:textColor="#0E0E0E"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/fname"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.434" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="AnanthayaMart"
        android:textColor="#101010"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.53"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.047" />


    <TextView
        android:id="@+id/fname"
        android:layout_width="122dp"
        android:layout_height="30dp"
        android:text="@string/first"
        android:textColor="#050505"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.069"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.349" />

    <TextView
        android:id="@+id/mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textColor="#040404"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/contact"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.577" />

    <TextView
        android:id="@+id/profileAddress"
        android:layout_width="174dp"
        android:layout_height="38dp"
        android:text="Your Address"
        app:layout_constraintBaseline_toBaselineOf="@+id/address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.932"
        android:background="@drawable/box"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/profilePhone"
        android:layout_width="174dp"
        android:layout_height="38dp"
        android:background="@drawable/box"
        android:text="Your Contact Number"
        app:layout_constraintBaseline_toBaselineOf="@+id/contact"
        app:layout_constraintStart_toStartOf="@+id/profileEmail" />

    <TextView
        android:id="@+id/profileLname"
        android:background="@drawable/box"
        android:layout_width="174dp"
        android:layout_height="38dp"
        android:text="Your Last Name"
        app:layout_constraintBaseline_toBaselineOf="@+id/lname"
        app:layout_constraintStart_toStartOf="@+id/profilePhone" />

    <TextView
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:textColor="#070707"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/mail"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.642" />

    <TextView
        android:id="@+id/contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        android:textColor="#090909"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/lname"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.507" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="24dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/profileFname"
        android:background="@drawable/box"
        android:layout_width="174dp"
        android:layout_height="38dp"
        android:text="Your First Name"
        app:layout_constraintBaseline_toBaselineOf="@+id/fname"
        app:layout_constraintStart_toStartOf="@+id/profileLname" />

    <TextView
        android:id="@+id/profileEmail"
        android:layout_width="174dp"
        android:layout_height="38dp"
        android:text="Your Email"
        android:background="@drawable/box"
        app:layout_constraintBaseline_toBaselineOf="@+id/mail"
        app:layout_constraintStart_toStartOf="@+id/profileAddress" />

    <ImageView
        android:id="@+id/profileImage"
        android:layout_width="97dp"
        android:layout_height="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.178"
        app:srcCompat="@drawable/user2" />

    <Button
        android:id="@+id/changeProfile"
        android:layout_width="368dp"
        android:layout_height="53dp"
        android:background="@android:color/holo_orange_dark"
        android:text="change  profile  Details"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.465"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.868" />

    <Button
        android:id="@+id/resetPasswordLocal"
        android:layout_width="369dp"
        android:layout_height="52dp"
        android:background="#0CF22B"
        android:text="Reset  password"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.989" />

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:text="logout"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.204" />

    <Button
        android:id="@+id/resendCode"
        android:layout_width="296dp"
        android:layout_height="43dp"
        android:background="@color/common_google_signin_btn_text_dark_disabled"
        android:text="Your Email has not been verified yet ! Click Here to Verify !"
        android:textColor="#FA0303"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.105" />

    <TextView
        android:id="@+id/feedBack"
        android:layout_width="149dp"
        android:layout_height="20dp"
        android:layout_marginEnd="136dp"
        android:background="@color/common_google_signin_btn_text_dark_focused"
        android:text="     Leave a Feedback"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.456"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.767" />

    <TextView
        android:id="@+id/viewFeedText"
        android:layout_width="162dp"
        android:layout_height="22dp"
        android:layout_marginStart="124dp"
        android:background="@color/common_google_signin_btn_text_dark_focused"
        android:text="View Feedback Details"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintHorizontal_bias="0.46"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.716"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>